# aletheia

./: .gitignore  .tool-versions  Cargo.toml  Nargo.toml  README.md  Scarb.toml  package-lock.json  package.json  rust-toolchain.toml  snfoundry.toml
circuits/withdraw/: Nargo.toml  Prover.toml
cli/deployment/: Cargo.toml  README.md
cli/deployment/src/: args.rs  errors.rs  main.rs  utils.rs
cli/deposit/: Cargo.toml  README.md
cli/deposit/src/: args.rs  errors.rs  main.rs  utils.rs
cli/withdraw/: Cargo.toml  README.md
cli/withdraw/src/: args.rs  errors.rs  main.rs  utils.rs
client/: Cargo.toml  package-lock.json  package.json  tsconfig.json
client/src/: app.css
client/src/components/: ActionButton.svelte  ErrorAlert.svelte  InputField.svelte  JsonAction.svelte  Navbar.svelte  PageContentContainer.svelte  ToggleTheme.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/deposit/: +page.svelte
client/src/routes/withdraw/: +page.svelte
client/static/: withdraw.json
client/static/circuits/withdraw/src/: main.nr
integrations/: Scarb.toml  snfoundry.toml
integrations/src/: executor.cairo  lib.cairo  merkle.cairo  poseidon.cairo  privacypools.cairo  withdraw_extension.cairo  withdraw_verifier.cairo  zk_extension.cairo
integrations/src/verifiers/: honk_verifier.cairo  honk_verifier_constants.cairo
integrations/src/withdraw_verifier/: honk_verifier.cairo  honk_verifier_circuits.cairo  honk_verifier_constants.cairo
integrations/tests/: test_contract.cairo
