[workspace]
resolver = "2"
members = ["cli/deposit", "cli/withdraw"]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
starknet = "0.13.0"
starknet-types-core = { version = "0.1.7", default-features = false }
url = "2.5.4"
cainome-cairo-serde = "0.1.0"
cainome-cairo-serde-derive = "0.1.0"
tokio = { version = "1.43.0", features = [
    "macros",
    "time",
    "full",
    "rt-multi-thread",
] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.8.5"
