[package]
name = "deployment"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deployment"
path = "src/main.rs"

[dependencies]
starknet.workspace = true
clap.workspace = true
url.workspace = true
cainome-cairo-serde.workspace = true
cainome-cairo-serde-derive.workspace = true
tokio.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true